test/tests/operators/from_http/error_infer_unknown_extension.txt
error: could not infer parser for URL path `/infer/unknown.bin`
 --> tests/operators/from_http/error_infer_unknown_extension.tql:7:1
  |
7 | from_http env("HTTP_FIXTURE_INFER_UNKNOWN_EXTENSION_URL"), tls=false
  | ^^^^^^^^^ 
  |
  = hint: pass an explicit parser pipeline
